--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,7 +1,7 @@
 name: Docker Image
 on:
   push:
-    branches: [ "master", "develop" ]
+    branches: ["master", "develop"]
   pull_request:
 jobs:
   build:
@@ -10,6 +10,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: docker/build-push-action@v1
         with:
-          repository: inbucket/inbucket
+          repository: phamhieu/inbucket
           push: false
           tag_with_ref: true
